// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestNotesButton :  renders a snapshot of <RequestNotesButton /> with mock props when noteFlag is  supplied 1`] = `
<button
  className="ant-btn ant-btn-round notes__btn notes__btn--unread"
  onClick={[Function]}
  type="button"
>
  <img
    src="[jest.find('../utils')]"
  />
</button>
`;

exports[`RequestNotesButton :  renders a snapshot of <RequestNotesButton /> with mock props when noteFlag is not supplied 1`] = `
<button
  className="ant-btn ant-btn-round notes__btn notes__btn--read"
  onClick={[Function]}
  type="button"
>
  <img
    src="[jest.find('../utils')]"
  />
</button>
`;
